Bug 647365: Don't re-display non-Camino windows when screen parameters change. Patch by Stuart Morgan <stuart.morgan@alumni.case.edu>, rs=hyatt (but examined by me), a/Cm2.0.8=me